# GenAi-Coroutines

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
genai_coroutines/: __init__.py
src/: lib.rs  ocr.rs  responses.rs
test/: test_chandra.py  test_chatgpt.py
